[tool.poetry]
name = "rho-aware-training"
version = "0.1.0"
description = ""
authors = ["Illarion Iov <illariov1809@gmail.com>"]
license = "MIT"
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.10"
hydra-core = "^1.3.2"
wandb = "^0.21.0"
hydra-optuna-sweeper = "^1.2.0"

[tool.poetry.group.dev.dependencies]
flakeheaven = "^3.3.0"
isort = "^5.13.2"
mypy = "^1.11.2"
pre-commit = "^4.2.0"
ruff = "^0.6.1"
gitlint = ">=0.19,<1.0"


[tool.flakeheaven.plugins]
flake8-annotations-complexity = ["+*"]
flake8-deprecated = ["+*"]
flake8-newspaper-style = ["+*"]
flake8-variables-names = ["+*"]

[tool.mypy]
exclude = []
ignore_missing_imports = true
strict = true
strict_optional = true
untyped_calls_exclude = []
warn_return_any = true
warn_unreachable = true


[tool.ruff]
exclude = [
    "venv",
    ".git",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".ruff_cache",
    "site-packages",
]
line-length = 88
src = ["llmadapt"]
target-version = "py311"

[tool.ruff.format]
indent-style = "space"
line-ending = "auto"
quote-style = "double"
skip-magic-trailing-comma = false

[tool.ruff.lint]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.isort]
case-sensitive = true
combine-as-imports = true
force-sort-within-sections = true
length-sort = true


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
